# MindSpace

./: .bumpversion.cfg  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  QUICKSTART.md  commit_msg.txt  config.yaml  pyproject.toml  run.py  run.sh
Agent/: QUICKSTART.md  agent.py  bot.py  config.py  design.md  handlers.py  help.md  logger.py  manager.py  mcp_bridge.py  pageindex_manager.py  tools.py  viking.py
docs/: design.md  help.md
profiles/: run.sh
src/mindspace/: main.py
src/mindspace/agent/: agent.py  brain.py  mcp.py  prompts.py  tools.py
src/mindspace/bot/: client.py  handlers.py  services.py  views.py
src/mindspace/core/: config.py  logger.py
src/mindspace/knowledgebase/: manager.py  pageindex.py  viking.py
